# LancetMITK-Adition

Modules/LancetAlgo/Navigation/: CMakeLists.txt  files.cmake
Modules/LancetAlgo/Navigation/include/: navigation.h
Modules/LancetAlgo/Physiology/: CMakeLists.txt  files.cmake
Modules/LancetHardwareDevice/: CMakeLists.txt  files.cmake
Modules/LancetHardwareDevice/DianaApi/: version
Modules/LancetHardwareDevice/cmdapps/: CMakeLists.txt
Modules/LancetHardwareDevice/include/: AbstractCamera.h  AbstractRobot.h  AbstractUi.h  AimCamera.h  AriemediCamera.h  DianaRobot.h  LancetAimCamera.h  LancetDianaRobot.h  LancetHansRobot.h  LancetJakaRobot.h  LancetNDICamera.h  LancetStaubilRobot.h  LancetThorRobot.h
Modules/LancetHardwareDevice/src/: AimCamera.cpp  AriemediCamera.cpp  DianaRobot.cpp  LancetAimCamera.cpp  LancetDianaRobot.cpp  LancetHansRobot.cpp  LancetJakaRobot.cpp  LancetStaubilRobot.cpp  LancetThorRobot.cpp
Modules/LancetIGT/: CMakeLists.txt  files.cmake
Modules/LancetIGT/Algorithms/: lancetApplyDeviceRegistratioinFilter.cpp  lancetApplyDeviceRegistratioinFilter.h  lancetApplySurfaceRegistratioinFilter.cpp  lancetApplySurfaceRegistratioinFilter.h  lancetApplySurfaceRegistratioinStaticImageFilter.cpp  lancetApplySurfaceRegistratioinStaticImageFilter.h  lancetNavigationDataInReferenceCoordFilter.cpp  lancetNavigationDataInReferenceCoordFilter.h  lancetNavigationDataToPointSetFilter.cpp  lancetNavigationDataToPointSetFilter.h  lancetNavigationSceneFilter.cpp  lancetNavigationSceneFilter.h  lancetTreeCoords.cpp  lancetTreeCoords.h
Modules/LancetIGT/DataManagement/: lancetNavigationObject.cpp  lancetNavigationObject.h  lancetPathPoint.cpp  lancetPathPoint.h  lancetTha3DimageGenerator.cpp  lancetTha3DimageGenerator.h  lancetThaCupObject.cpp  lancetThaCupObject.h  lancetThaEnhancedReductionObject.cpp  lancetThaEnhancedReductionObject.h  lancetThaFemurObject.cpp  lancetThaFemurObject.h  lancetThaFemurStemCouple.cpp  lancetThaFemurStemCouple.h  lancetThaPelvisCupCouple.cpp  lancetThaPelvisCupCouple.h  lancetThaPelvisCupStencilObject.cpp  lancetThaPelvisCupStencilObject.h  lancetThaPelvisObject.cpp  lancetThaPelvisObject.h  lancetThaReductionObject.cpp  lancetThaReductionObject.h  lancetThaStemObject.cpp  lancetThaStemObject.h  lancetTrackingDeviceSourceConfigurator.cpp  lancetTrackingDeviceSourceConfigurator.h
Modules/LancetIGT/Dock/: THA_ProjectDiagram.mdj
Modules/LancetIGT/IO/: lancetNavigationObjectWriter.cpp  lancetNavigationObjectWriter.h
Modules/LancetIGT/Rendering/: lancetNavigationObjectVisualizationFilter.cpp  lancetNavigationObjectVisualizationFilter.h
Modules/LancetIGT/TrackingDevices/: kukaRobotDevice.cpp  kukaRobotDevice.h  lancetKukaRobotDevice.cpp  lancetKukaRobotDevice.h  lancetKukaTrackingDeviceTypeInformation.cpp  lancetKukaTrackingDeviceTypeInformation.h  lancetRobotTrackingTool.cpp  lancetRobotTrackingTool.h
Modules/LancetIGT/UI/: QmitkLancetKukaWidget.cpp  QmitkLancetKukaWidget.h  QmitkLancetKukaWidget.ui
Modules/LancetIGT/include/: TrackingObject.h  lancetNavigationObjectWriter.h
Modules/LancetIGT/src/: TrackingObject.cpp  lancetNavigationObjectWriter.cpp
Modules/LancetIGT/test/: files.cmake  lancetTreeCoordTest.cpp
Modules/LancetIGTUI/: CMakeLists.txt  files.cmake
Modules/LancetIGTUI/Qmitk/: QlancetToolDistanceWidget.cpp  QlancetToolDistanceWidget.h  QmitkLancetKukaWidget.cpp  QmitkLancetKukaWidget.h
Modules/LancetKukaFRI/: CMakeLists.txt  FRI.cmake  files.cmake
Modules/LancetKukaFRI/include/: TransformationProviderClient.h
Modules/LancetKukaFRI/src/: TransformationProviderClient.cpp
Modules/LancetRobot/: CMakeLists.txt  RobotHardware.cmake  files.cmake
Modules/LancetRobot/include/: kukaRobotDevice.h  robotRegistration.h  robotUtil.h  udpmessage.h  udpsocketrobotheartbeat.h
Modules/LancetRobot/src/: kukaRobotDevice.cpp  robotRegistration.cpp  robotUtil.cpp  udpmessage.cpp  udpsocketrobotheartbeat.cpp
Modules/LancetRobot/test/: files.cmake  lancetRobotRegistrationTest.cpp
Plugins/org.mitk.lancet.CZXtest/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.DianaSeven/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.NeurosurgicalPunctureRobot/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.ZYXtest/: CMakeLists.txt  PrintDataHelper.cpp  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.movedata/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.movedata/resources/: icon.xpm
Plugins/org.mitk.lancet.robot/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.robot/resources/: resources.qrc
Plugins/org.mitk.lancet.services.medicalrecordsadministration/: CMakeLists.txt  files.cmake
Plugins/org.mitk.lancet.services.medicalrecordsadministration/src/: lancetIMedicalRecordsAdministrationService.cpp  lancetIMedicalRecordsAdministrationService.h  lancetIMedicalRecordsLoader.h  lancetIMedicalRecordsProperty.cpp  lancetIMedicalRecordsProperty.h  lancetIMedicalRecordsScanner.h  mainpage.h
Plugins/org.mitk.lancet.services.medicalrecordsadministration/tests/: CMakeLists.txt
Plugins/org.mitk.lancet.services.spatialfitting.ex/: CMakeLists.txt  files.cmake
Plugins/org.mitk.lancet.services.spatialfitting.ex/src/: lancetSpatialFittingAbstractDirector.h  lancetSpatialFittingAbstractModel.cpp  lancetSpatialFittingAbstractModel.h  lancetSpatialFittingAbstractPipelineBuilder.h  lancetSpatialFittingAbstractService.cpp  lancetSpatialFittingAbstractService.h  lancetSpatialFittingGlobal.h
Plugins/org.mitk.lancet.services.spatialfitting.ex/tests/: CMakeLists.txt
Plugins/org.mitk.lancet.statemachine.services/: CMakeLists.txt  doxyfile  files.cmake  manifest_headers.cmake
Plugins/org.mitk.lancet.tha.application/: CMakeLists.txt  create_provisioning.cmake  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.lancet.zzxtest/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
(+4776 files in other folders)
