include(FRI.cmake)

if(MITK_USE_KUKA_FRI)
  set(ADDITIONAL_INCLUDE_DIRS ${ADDITIONAL_INCLUDE_DIRS} ${MITK_KUKA_FRI_INCLUDE_DIR})
  set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} ${MITK_KUKA_FRI_LIB})
endif()

mitk_create_module(
  INCLUDE_DIRS
    PUBLIC include ${ADDITIONAL_INCLUDE_DIRS}
  DEPENDS PUBLIC MitkCore MitkLancetCore
  PACKAGE_DEPENDS
  ADDITIONAL_LIBS PUBLIC "${ADDITIONAL_LIBS}"
)

#add_subdirectory(cmdapps)
