include(RobotHardware.cmake)

set(qt5_depends Qt5|Widgets+Network)

if(MITK_USE_KUKA_ROBOT)
  set(ADDITIONAL_INCLUDE_DIRS ${ADDITIONAL_INCLUDE_DIRS} ${MITK_KUKA_ROBOT_INCLUDE_DIR})
  set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} ${MITK_KUKA_ROBOT_LIB})
endif()

MITK_CREATE_MODULE(
  INCLUDE_DIRS
    PUBLIC ${ADDITIONAL_INCLUDE_DIRS}
  DEPENDS MitkCore MitkIGT
  PACKAGE_DEPENDS PUBLIC ${qt5_depends}
  ADDITIONAL_LIBS PUBLIC "${ADDITIONAL_LIBS}"
  #FORCE_STATIC
)

#add_subdirectory(autoload)