project(org_mitk_lancet_DianaSeven)

mitk_create_plugin(
  EXPORT_DIRECTIVE DIANASEVEN_EXPORT
  EXPORTED_INCLUDE_SUFFIXES src
  MODULE_DEPENDS MitkQtWidgetsExt MitkIGTUI MitkLancetIGT MitkLancetRobot MitkLancetFileIO MitkLancetPrintDataHelper MitkLancetHardwareDevice MitkLancetRobot MitkLancetRobotRegistration
)


set(LANCET_DEVICE_Diana_INCLUDE "")
set(LANCET_DEVICE_Diana_LIB_DEBUG "")
set(LANCET_DEVICE_Diana_LIB_RELEASE "")
set(LANCET_DEVICE_Diana_BIN "")
set(LANCET_DEVICE_Diana_DLLS_DEBUG "")
set(LANCET_DEVICE_Diana_DLLS_RELEASE "")

set(LANCET_ARCHITECTURE_BIT "")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
  set(LANCET_ARCHITECTURE_BIT "X64")
endif()
set(LANCET_DEVICE_Diana_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/DianaApi/${LANCET_ARCHITECTURE_BIT}/include")
include_directories(${LANCET_DEVICE_Diana_INCLUDE})

set(LANCET_DEVICE_Diana_BIN "${CMAKE_CURRENT_SOURCE_DIR}/DianaApi/${LANCET_ARCHITECTURE_BIT}")

file(GLOB LANCET_DEVICE_Diana_LIB_RELEASE "${LANCET_DEVICE_Diana_BIN}/Release/*.lib")
file(GLOB LANCET_DEVICE_Diana_DLLS_RELEASE "${LANCET_DEVICE_Diana_BIN}/Release/*.dll")

target_link_libraries(org_mitk_lancet_DianaSeven PRIVATE 
  ${LANCET_DEVICE_Diana_LIB_RELEASE}
)

file(COPY ${LANCET_DEVICE_Diana_DLLS_RELEASE} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Release")


##########################################

set(LANCET_DEVICE_AIMOOE_INCLUDE "")
set(LANCET_DEVICE_AIMOOE_LIB_DEBUG "")
set(LANCET_DEVICE_AIMOOE_LIB_RELEASE "")
set(LANCET_DEVICE_AIMOOE_BIN "")
set(LANCET_DEVICE_AIMOOE_DLLS_DEBUG "")
set(LANCET_DEVICE_AIMOOE_DLLS_RELEASE "")

set(LANCET_ARCHITECTURE_BIT "")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
  set(LANCET_ARCHITECTURE_BIT "X64")
else()
  set(LANCET_ARCHITECTURE_BIT "X86")
endif()
set(LANCET_DEVICE_AIMOOE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/AimPosDll/${LANCET_ARCHITECTURE_BIT}/include")
include_directories(${LANCET_DEVICE_AIMOOE_INCLUDE})

set(LANCET_DEVICE_AIMOOE_BIN "${CMAKE_CURRENT_SOURCE_DIR}/AimPosDll/${LANCET_ARCHITECTURE_BIT}")
file(GLOB LANCET_DEVICE_AIMOOE_LIB_DEBUG "${LANCET_DEVICE_AIMOOE_BIN}/Debug/*.lib")
file(GLOB LANCET_DEVICE_AIMOOE_LIB_RELEASE "${LANCET_DEVICE_AIMOOE_BIN}/Release/*.lib")
file(GLOB LANCET_DEVICE_AIMOOE_DLLS_DEBUG "${LANCET_DEVICE_AIMOOE_BIN}/Debug/*.dll")
file(GLOB LANCET_DEVICE_AIMOOE_DLLS_RELEASE "${LANCET_DEVICE_AIMOOE_BIN}/Release/*.dll")

target_link_libraries(org_mitk_lancet_DianaSeven PRIVATE 
$<$<CONFIG:Debug>:${LANCET_DEVICE_AIMOOE_LIB_DEBUG}>
$<$<CONFIG:Release>:${LANCET_DEVICE_AIMOOE_LIB_RELEASE}>)

file(COPY ${LANCET_DEVICE_AIMOOE_DLLS_DEBUG} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Debug")  
file(COPY ${LANCET_DEVICE_AIMOOE_DLLS_RELEASE} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Release")
