project(org_mitk_lancet_ZYXtest)

mitk_create_plugin(
  EXPORT_DIRECTIVE ZYXTEST_EXPORT
  EXPORTED_INCLUDE_SUFFIXES src
  MODULE_DEPENDS MitkQtWidgetsExt MitkIGTUI MitkLancetIGT MitkLancetRobot MitkLancetAlgo
)

set(LANCET_DEVICE_AIMOOE_INCLUDE "")
set(LANCET_DEVICE_AIMOOE_LIB_DEBUG "")
set(LANCET_DEVICE_AIMOOE_LIB_RELEASE "")
set(LANCET_DEVICE_AIMOOE_BIN "")
set(LANCET_DEVICE_AIMOOE_DLLS_DEBUG "")
set(LANCET_DEVICE_AIMOOE_DLLS_RELEASE "")

set(LANCET_ARCHITECTURE_BIT "")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
  set(LANCET_ARCHITECTURE_BIT "X64")
else()
  set(LANCET_ARCHITECTURE_BIT "X86")
endif()
set(LANCET_DEVICE_AIMOOE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/AimPosDll/${LANCET_ARCHITECTURE_BIT}/include")
include_directories(${LANCET_DEVICE_AIMOOE_INCLUDE})

set(LANCET_DEVICE_AIMOOE_BIN "${CMAKE_CURRENT_SOURCE_DIR}/AimPosDll/${LANCET_ARCHITECTURE_BIT}")
file(GLOB LANCET_DEVICE_AIMOOE_LIB_DEBUG "${LANCET_DEVICE_AIMOOE_BIN}/Debug/*.lib")
file(GLOB LANCET_DEVICE_AIMOOE_LIB_RELEASE "${LANCET_DEVICE_AIMOOE_BIN}/Release/*.lib")
file(GLOB LANCET_DEVICE_AIMOOE_DLLS_DEBUG "${LANCET_DEVICE_AIMOOE_BIN}/Debug/*.dll")
file(GLOB LANCET_DEVICE_AIMOOE_DLLS_RELEASE "${LANCET_DEVICE_AIMOOE_BIN}/Release/*.dll")

target_link_libraries(org_mitk_lancet_ZYXtest PRIVATE 
$<$<CONFIG:Debug>:${LANCET_DEVICE_AIMOOE_LIB_DEBUG}>
$<$<CONFIG:Release>:${LANCET_DEVICE_AIMOOE_LIB_RELEASE}>)

file(COPY ${LANCET_DEVICE_AIMOOE_DLLS_DEBUG} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Debug")  
file(COPY ${LANCET_DEVICE_AIMOOE_DLLS_RELEASE} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Release")

set(LANCET_DEVICE_HansRobot_INCLUDE "")
set(LANCET_DEVICE_HansRobot_LIB_DEBUG "")
set(LANCET_DEVICE_HansRobot_LIB_RELEASE "")
set(LANCET_DEVICE_HansRobot_BIN "")
set(LANCET_DEVICE_HansRobot_DLLS_DEBUG "")
set(LANCET_DEVICE_HansRobot_DLLS_RELEASE "")

set(LANCET_DEVICE_HansRobot_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/HansRobotDll/include")
include_directories(${LANCET_DEVICE_HansRobot_INCLUDE})

set(LANCET_DEVICE_HansRobot_BIN "${CMAKE_CURRENT_SOURCE_DIR}/HansRobotDll")

file(GLOB LANCET_DEVICE_HansRobot_LIB_DEBUG "${LANCET_DEVICE_HansRobot_BIN}/Debug/*.lib")
file(GLOB LANCET_DEVICE_HansRobot_LIB_RELEASE "${LANCET_DEVICE_HansRobot_BIN}/Release/*.lib")
file(GLOB LANCET_DEVICE_HansRobot_DLLS_DEBUG "${LANCET_DEVICE_HansRobot_BIN}/Debug/*.dll")
file(GLOB LANCET_DEVICE_HansRobot_DLLS_RELEASE "${LANCET_DEVICE_HansRobot_BIN}/Release/*.dll")
file(GLOB LANCET_DEVICE_HansRobot_DLLS_RELEASE "${LANCET_DEVICE_HansRobot_BIN}/*.dll")
target_link_libraries(org_mitk_lancet_ZYXtest PRIVATE 
$<$<CONFIG:Debug>:${LANCET_DEVICE_HansRobot_LIB_DEBUG}>
$<$<CONFIG:Release>:${LANCET_DEVICE_HansRobot_LIB_RELEASE}>)

file(COPY ${LANCET_DEVICE_HansRobot_DLLS_DEBUG} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Debug")  
file(COPY ${LANCET_DEVICE_HansRobot_DLLS_RELEASE} DESTINATION "${MITK_BINARY_DIR}/bin/plugins/Release")
list(APPEND LANCET_DEVICE_HansRobot_DLLS_DEBUG "${LANCET_DEVICE_HansRobot_BIN}/Debug/pthreadVC2.dll")
list(APPEND LANCET_DEVICE_HansRobot_DLLS_RELEASE "${LANCET_DEVICE_HansRobot_BIN}/Release/pthreadVC2.dll")